--- a/src/style/cart.css
+++ b/src/style/cart.css
@@ -12,7 +12,7 @@ i {
 header {
     width: 100%;
     
-     line-height: 4.1rem; 
+     line-height: 6rem; 
       display: grid;
     grid-template-columns: 1fr 1fr;
     border-bottom: 0.1rem solid #9a9191;
@@ -44,25 +44,23 @@ header {
    .cart-icon {
     display: flex;
     text-align: end;
-    margin-right: 5rem;
-    margin-top: 3em;
+    margin-right: 8rem;
+    margin-top: 5em;
     align-items: center;
-    position: relative;
+    position: absolute;
     justify-content: flex-end;
   }
   
   .cart-icon img {
     width: 2.5rem;
-    height: 2.5rem;
+    height: 4.5rem;
     color: #2f80ed;
   } 
   .cart-items hr {
     margin: 2rem auto;
     overflow-y: scroll;
   }
-  .add-minus-quantity input:focus {
-    outline: none;
-  }
+  
   .cart-icon p {
     position: absolute;
     width: 1.5rem;
@@ -102,10 +100,10 @@ header {
     margin-top: -1em;
   }
   
-  .total-items-count {
+  /* .total-items-count {
     font-weight: bold;
     color: var(--main-color);
-  }
+  } */
   .main-cart-section .cart-items {
     width: 100%;
     height: 70rem;
@@ -190,7 +188,7 @@ header {
     font-size: 0.9em;
     margin-bottom: 0.7em;
   }
-  .add-minus-quantity {
+  /* .add-minus-quantity {
     display: flex;
     margin-left: -4em;
     margin-top: -0.1em;
@@ -203,8 +201,8 @@ header {
     background-color: transparent;
     outline: none;
     cursor: pointer;
-  }
-  .add-minus-quantity input {
+  } */
+  /* .add-minus-quantity input {
     width: 6rem;
     height: 1rem;
     border: 0.141rem solid var(--primary-color);
@@ -220,8 +218,8 @@ header {
     border-radius: 0;
     outline:none;
     background-color: lavender;
-  }
-  .price1 {
+  } */
+  /* .price1 {
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -232,12 +230,17 @@ header {
     font-size: 1.4rem;
     text-transform: capitalize;
     color: var(--main-color);
-  }
+  } */
   .remove-item {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     margin-right: 5rem;
+  }
+  .remove{
+    cursor: pointer;
+    height: 30px;
+    color:#ed4848;
   }
   
   .remove-item button {
@@ -245,7 +248,7 @@ header {
     cursor: pointer;
     background-color: transparent;
   }
-  .card-total {
+  /* .card-total {
     width: 95%;
     margin-top: -75rem;
     text-align: left;
@@ -259,9 +262,9 @@ header {
     color: #606166;
     
     
-  }
+  } */
   
-  .card-total button {
+  /* .card-total button {
     border: none;
     font-size: 1rem;
     padding: 1rem 3rem;
@@ -269,7 +272,7 @@ header {
     background-color: #349bf3;
     text-transform: uppercase;
     margin-top: 1rem;
-    /* border-radius: 0.5rem; */
+    border-radius: 0.5rem;
     cursor: pointer;
     letter-spacing: 1px;
     width: 300px;
@@ -290,10 +293,10 @@ header {
   }
   .clear-cart:hover{
     background-color: #ed4848;
-  }
-  .fa-trash-alt {
+  } */
+  /* .fa-trash-alt {
     color: #ed4848;
-  }
+  } */
   
   .fa-plus:hover {
     color: #42c157;
@@ -308,11 +311,11 @@ header {
     color: var(--icon-color);
 
   }
-  
+/*   
   .card-total button:hover {
     background-color: #0077dc;
   }
   .sellicon{
     margin-left: 6px;
     color: #0077dc;
-  }
+  } */
