--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,22 @@
 @font-face{
   font-family:'Courier New', Courier, monospace;
 }
+.dark-theme{
+  --main-heading:#5f99be;
+  --para-clr:#fff;
+  --btn-bg-color:#fff;
+  --btn-text-clr:black;
+  --bg-clr:#111b20;
+  
+}
+.light-theme{
+  --main-heading:#5f99be;
+  --para-clr:#333;
+  --btn-bg-color:#111b20;
+  --btn-text-clr:#fff;
+  --bg-clr:#fff;
+  
+}
 /* .page {
   
   width:70%;
