--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,26 @@
   height: 40vmin;
   pointer-events: none;
 }
+.dark-theme{
+  --main-heading:#5f99be;
+  --para-clr:#fff;
+  --btn-bg-color:#fff;
+  --btn-text-clr:black;
+  --bg-clr:#111b20;
+  --form:#36454F;
+  --foot:#36454F;;
+ --comp:#36454F;
+}
+.light-theme{
+  --main-heading:#5f99be;
+  --para-clr:#333;
+  --btn-bg-color:#111b20;
+  --btn-text-clr:#fff;
+  --bg-clr:#fff;
+  --foot:#111b20;
+  --comp:whitesmoke;
+  --shadow: 0 0.188em 1.55em rgb(156, 156, 156);
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
