--- a/src/Forms/components/learning.css
+++ b/src/Forms/components/learning.css
@@ -188,3 +188,17 @@ a{
     padding: 10px;
     margin: 30px;   
 } */
+
+
+
+
+
+.items-info .PlayList{
+  font-style: normal;
+  font-weight: bold;
+  font-size: 2.2rem;
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
+  color: var(--main-color);
+}
