dark mode and formik

--- a/src/Forms/components/learning.css
+++ b/src/Forms/components/learning.css
@@ -10,6 +10,7 @@
     height: 53px;
     color: black;
     box-shadow: #f7f9fa;
+    background-color: var(--form);
     
 }
 navbar-toggler:focus{
