--- a/src/Forms/dashboard.css
+++ b/src/Forms/dashboard.css
@@ -14,7 +14,7 @@
     margin-left: 140px;
     margin-top: 30px;
     margin-bottom: 30px;
-    
+    color:var(--para-clr)
 }
 .base{
     font-size: 20px;
@@ -50,7 +50,7 @@ a{
 }
 
 .footer{
-    background-color: black;
+    background-color: var(--foot);
     height: 85px;
     color: white;
 }
@@ -68,12 +68,12 @@ a{
 .brands{
     height: 240px;
     width: 100%;
-    background-color: #f7f9fa;
+    background-color: var(--form);
     margin-top: 50px;
 }
 
 .brandsInside{
-    color: grey;
+    color: var(--para-clr);
     font-size: 20px;
     font-style: italic;
     font-family: Arial, Helvetica, sans-serif;
@@ -99,7 +99,7 @@ a{
     /* margin-top: 50px; */
     height: 450px;
     width: 100%;
-    background-color: #f7f9fa;
+    background-color: var(--form);
 }
 
 .gridInside{
@@ -109,7 +109,7 @@ a{
     margin-top: 50px;
     margin-left: 525px;
     margin-bottom: 30px;
-    color: black;
+    color: var(--para-clr);
     padding: 20px;
     
 }
