--- a/src/Forms/login.css
+++ b/src/Forms/login.css
@@ -1,9 +1,13 @@
+body{
+    background-color: var(--bg-clr);
+}
 * {
     margin: 0;
     box-sizing: border-box;
+    
 }
 
-.navbar{
+/* .navbar{
     background-color:white;
     width: 100%;
     height: 100%;
@@ -15,10 +19,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
+    
+} */
+/* 
 .cover{
-    background-color: white;
+    background-color: red;
     width: 25em;
     height: 29em;
     position: relative;
@@ -30,10 +35,10 @@
     justify-content: space-around;
     color: red;
     
-}
+} */
 
 .login{
-    color: black;
+    color: var(--main-heading);
 }
 
 input {
@@ -65,15 +70,16 @@ input:focus{
 .login-btn:hover{
     transform: scale(1.25);
 }
-
+/* 
 .top{
     height: 4.5em;
     width: 100%;
-    background-color:whitesmoke;
+    background-color:red;
     color: white;
     box-shadow: 0 0.188em 1.550em rgb(189, 180, 180);
     display: flex;
-}
+} */
+
 
 .image{
     height: 59px;
