--- a/src/Forms/signUp.css
+++ b/src/Forms/signUp.css
@@ -4,10 +4,13 @@
 }
 
 .navbar{
-    background-color:white;
+    background-color:var(--bg-clr);
     width: 100%;
     height: 100%;
 }
+/* .navbar{
+    background-color: aqua;
+} */
 
 .page{
     height: 600px;
@@ -15,6 +18,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 .cover{
@@ -70,7 +74,7 @@ input:focus{
 .top{
     height: 4.5em;
     width: 100%;
-    background-color:whitesmoke;
+    background-color:white;
     color: white;
     box-shadow: 0 0.188em 1.550em rgb(189, 180, 180);
     display: flex;
