--- a/src/Forms/dashboard.css
+++ b/src/Forms/dashboard.css
@@ -2,6 +2,15 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.navbar{
+
+    position: fixed;
+    /* z-index: 500; */
+   
+}
+
+
 .jumbotron{
     font-size: 20px;
     font-style: italic;
@@ -14,6 +23,7 @@
     margin-left: 140px;
     margin-top: 30px;
     margin-bottom: 30px;
+    position: relative;
     
 }
 .base{
@@ -49,11 +59,34 @@ a{
     text-decoration: none;
 }
 
-.footer{
-    background-color: black;
-    height: 85px;
+
+.footer {
+    background-color:black;
     color: white;
-}
+    padding: 20px;
+    text-align: center;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 200px;
+   
+  }
+
+  .columns {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  
+  .column {
+    flex: 0 0 calc(33.33% - 20px);
+    margin-bottom: 20px;
+  }  
+
+  .copy {
+    margin-top: 20px;
+  }
+
 .fimg{
     height: 59px;
     width: 65px;
@@ -70,6 +103,7 @@ a{
     width: 100%;
     background-color: #f7f9fa;
     margin-top: 50px;
+    position: relative;
 }
 
 .brandsInside{
@@ -100,6 +134,7 @@ a{
     height: 450px;
     width: 100%;
     background-color: #f7f9fa;
+    position: relative;
 }
 
 .gridInside{
