--- a/src/Forms/signUp.css
+++ b/src/Forms/signUp.css
@@ -1,12 +1,13 @@
-* {
+/* * {
     margin: 0;
     box-sizing: border-box;
-}
+} */
 
 .navbar{
     background-color:white;
     width: 100%;
     height: 100%;
+    position: fixed;
 }
 
 .page{
@@ -77,10 +78,10 @@ input:focus{
 }
 
 .image{
-    height: 59px;
-    width: 65px;
-    margin-left: 20px;
-    margin-top: 5px;
+    height: 70px;
+    width: 70px;
+    /* margin-left: 20px;
+    margin-top: 5px; */
     
 }
 
