--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,46 @@
     transform: rotate(360deg);
   }
 }
+
+
+.layout-container {
+  display: flex;
+}
+
+.content {
+  flex: 1; /* This allows the content area to take up the remaining space */
+  padding-left: 30px; /* Adjust this value to match the width of your sidebar */
+  padding-top: 3rem;
+}
+
+.navbar {
+  z-index: 1; 
+  background-color: rgb(82 81 81);
+  height: 3rem;
+  position: fixed;
+  top:0%;
+  width: 100%;
+}
+
+
+/* dark mode */
+.dark-theme{
+  --main-heading:#5f99be;
+  --para-clr:#fff;
+  --btn-bg-color:#fff;
+  --btn-text-clr:black;
+  --bg-clr:#111b20;
+  --form:#36454F;
+  --foot:#111b20;;
+ --comp:#36454F;
+}
+.light-theme{
+  --main-heading:#5f99be;
+  --para-clr:#333;
+  --btn-bg-color:#111b20;
+  --btn-text-clr:#fff;
+  --bg-clr:#fff;
+  --foot:#111b20;
+  --comp:whitesmoke;
+  --shadow: 0 0.188em 1.55em rgb(156, 156, 156);
+}
