--- a/src/Forms/components/learning.css
+++ b/src/Forms/components/learning.css
@@ -4,18 +4,18 @@
     box-sizing: border-box;
     font-family: Mulish;
 }
-.navbar-toggler{
+/* .navbar-toggler{
     width: 100%;
     border-color: rgb(232, 232, 232);
     height: 53px;
     color: black;
     box-shadow: #f7f9fa;
     
-}
-navbar-toggler:focus{
+} */
+/* navbar-toggler:focus{
     background-color: rgb(235, 243, 243);
     
-}
+} */
 a{
     margin: 45px;
     color: black;
@@ -84,16 +84,13 @@ a{
   .main-cart-section h1 {
       font-style: normal;
       font-weight: bold;
-      font-size: 2rem;
       text-transform: capitalize;
       color: rgba(41, 41, 41, 1);
-      margin-top: 4rem;
+      margin-top: 1rem;
       margin-left: 5rem;
     }
   
     .main-cart-section .cart-items {
-      width: 90%;
-      height: 62rem;
       /* background: linear-gradient(
         103.49deg,
         #ffffff -28.13%,
