--- a/src/Forms/dashboard.css
+++ b/src/Forms/dashboard.css
@@ -30,7 +30,7 @@
     margin-left: 140px;
     /* margin-top: 10px; */
 }
-.navbar-toggler{
+/* .navbar-toggler{
     width: 100%;
     height: 53px;
     background-color: white;
@@ -39,7 +39,7 @@
 navbar-toggler:focus{
     background-color: rgb(235, 243, 243);
     
-}
+} */
 
 a{
     margin: 45px;
@@ -49,11 +49,11 @@ a{
     text-decoration: none;
 }
 
-.footer{
+/* .footer{
     background-color: black;
     height: 85px;
     color: white;
-}
+} */
 .fimg{
     height: 59px;
     width: 65px;
