--- a/src/Forms/sidenavbar/sidenavbar.css
+++ b/src/Forms/sidenavbar/sidenavbar.css
@@ -1,11 +1,12 @@
 .side-navbar {
     position: fixed;
-    top: 0;
+    top: 93px;
     left: 0;
     height: 100%;
-    width: 250px; /* Adjust the width as needed */
-    background-color: #333; /* Background color for the sidebar */
+    width: 50px; 
+    background-color: lightgrey; 
     padding-top: 20px;
+    
   }
   
   .side-navbar ul {
@@ -18,13 +19,17 @@
   }
   
   .side-navbar a {
-    color: white;
+    color: black;
     text-decoration: none;
     display: block;
     padding: 10px;
-    transition: 0.3s;
+    transition: 2s;
   }
   
-  .side-navbar a:hover {
-    background-color: #555; /* Hover color */
+  /* .side-navbar a:hover {
+    background-color: gray; 
+  } */
+
+  .icon{
+   margin-left:-40px;
   }
