--- a/src/Forms/components/sidebar.css
+++ b/src/Forms/components/sidebar.css
@@ -4,7 +4,7 @@
     width:35px;
     color: white;
     position: fixed;
-    top: 0;
+    top: 3rem;
     left: 0;
     background-color: #b4b4b47d;
     overflow-x: hidden;
@@ -38,4 +38,5 @@
   .icon{
    margin-left:-50px;
   }
+
   
