--- a/src/Forms/style/courses.css
+++ b/src/Forms/style/courses.css
@@ -2,7 +2,7 @@
     margin: 0;
     box-sizing: border-box;
 }
-.navbar-toggler{
+/* .navbar-toggler{
     width: 100%;
     border-color: rgb(232, 232, 232);
     height: 53px;
@@ -14,14 +14,14 @@
 navbar-toggler:focus{
     background-color: rgb(235, 243, 243);
     
-}
-a{
+} */
+/* a{
     margin: 45px;
     color: black;
     font-size: 15px;
     font-family: var(--font-stack-heading-serif);
     text-decoration: none;
-}
+} */
 .coursesTop{
     
     margin-top: 20px;
@@ -40,17 +40,19 @@ a{
     /* margin: 30px;   */
 }
 .left{
-    font-family: 'Anton', sans-serif;
-    margin-left: 50px;
+    font-family: 'Montserrat', sans-serif;
+    margin-left: 52px;
     color:  rgb(88, 88, 88);
     display: flex;
     justify-content: left;
-    font-size:40px;
+    font-size:32px;
+    margin-top: -1rem;
     
 }
 
 .rightt{
-    height: 110px;
+    
+    height: 90px;
     width: 90%;
     display: flex;
     margin-top: 8px;
@@ -84,8 +86,9 @@ a{
     display: flex;
     flex-wrap: wrap;
     margin-top: 20px;
-    background-color:#f7f9fa;
-
+    background-color:white;
+    justify-content: center;
+    align-items: center;
 }
 
 .Cbox{
@@ -95,7 +98,7 @@ a{
         background-color: white;
         color: black;
         font-size: 17px;
-        font-family: 'Anton', sans-serif;
+        font-family: Arial, sans-serif;
         margin: 10px;
         border-radius: 8px;
         border-color: whitesmoke;
@@ -108,13 +111,20 @@ a{
 }
 
 .courseImg{
-    height: 180px;
-    width: 100%;
+    height: 150px;
+    width: 85%;
     /* margin-left: 30px; */
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-left: 10px;
     box-shadow: #f7f9fa;
     margin-bottom: 20px;
    
+}
+.grid{
+    margin-left: 90rem;
+    margin-top: 1rem;
+    display: flex;
+    cursor: pointer;
 }
 
 .cTop{
@@ -123,10 +133,10 @@ a{
     justify-content: center;
     align-items: center;
     padding: 17px;
-    margin-left: -15px;
+    margin-left: -10px;
 }
 .courseBox{
-    height: 1000px;
+    height: 100%;
     width: 100%;
     display: flex;
     margin-top: 20px;
@@ -136,25 +146,28 @@ a{
 
 .Cbox{
 
-        height: 450px;
-        width: 350px;
-        background-color: white;
+        height: 410px;
+        width: 340px;
+        background-color: whitesmoke;
         color: black;
         font-size: 17px;
         font-family: Arial, Helvetica, sans-serif;
-        margin: 10px;
+        margin: 65px;
         border-radius: 8px;
         border-color: whitesmoke;
         box-shadow: rgb(180, 177, 177);
         border-style: solid;
         justify-content: center;
         align-items: center;
-        padding: 19px;
+        padding: 12px;
     
+}
+.category{
+    margin-left: 1rem;
 }
 
 .subscribe-btn{
-    width: 80%;
+    width: 70%;
     height: 2em;
     background-color:black;
     display: flex;
@@ -165,7 +178,7 @@ a{
     color: white;
     border-radius: 4px;
     padding: 19px;
-    margin-left: 35px;
+    margin-left: 25px;
     margin-top: 30PX;
 }
 
@@ -178,7 +191,8 @@ a{
 .backdropbox{
     margin-top: 10px;
     height: 300px;
-    background-color: whitesmoke;
+    
+    background-color:whitesmoke;
 }
 
 .css-1elwnq4-MuiPaper-root-MuiAccordion-root:first-of-type {
