--- a/src/Forms/style/dashboard.css
+++ b/src/Forms/style/dashboard.css
@@ -1,7 +1,7 @@
-* {
+/* * {
     margin: 0;
     box-sizing: border-box;
-}
+} */
 .jumbotron{
     font-size: 20px;
     font-style: italic;
@@ -47,22 +47,6 @@ a{
     font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
-}
-
-.footer{
-    background-color: var(--foot);
-    height: 85px;
-    color: white;
-}
-.fimg{
-    height: 59px;
-    width: 65px;
-    margin-left: 20px;
-    margin-top: 21px;
-}
-.f{
-    margin-left: 1250px;
-    margin-top: -25px;
 }
 
 .brands{
