--- a/src/Forms/style/login.css
+++ b/src/Forms/style/login.css
@@ -1,28 +1,8 @@
-* {
-    margin: 0;
-    box-sizing: border-box;
+body{
+    background-color: var(--bg-clr);
 }
-
-.navbar{
-    background-color:var(--bg-clr);
-    width: 100%;
-    height: 100%;
-}
-/* .navbar{
-    background-color: aqua;
-} */
-
-.page{
-    height: 600px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-
 .cover{
-    background-color: white;
+    background-color: var(--form);
     width: 25em;
     height: 33em;
     position: relative;
@@ -33,12 +13,65 @@
     align-items: center;
     justify-content: space-around;
     color: red;
-    margin-top: 40px;
+    margin-top: 150px;
     
 }
 
-.signUp{
-    color: black;
+/* .cover{
+    background-color: var(--form);
+    width: 25em;
+    height: 33em;
+    position: relative;
+    border-radius: 1em;
+    box-shadow: var(--shadow);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    color: red;
+    margin-top: 40px;
+    
+} */
+
+/* .navbar{
+    background-color:white;
+    width: 100%;
+    height: 100%;
+}
+
+.page{
+    height: 600px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+} */
+/* 
+.cover{
+    background-color: red;
+    width: 25em;
+    height: 29em;
+    position: relative;
+    border-radius: 1em;
+    box-shadow: 0 0.188em 1.550em rgb(189, 180, 180);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    color: red;
+    
+} */
+
+.login{
+    color: var(--main-heading);
+}
+.image{
+    height: 59px;
+    width: 65px;
+    margin-left: 20px;
+    margin-top: 5px;
+    
 }
 
 input {
@@ -54,60 +87,41 @@ input:focus{
     outline-color: rgb(122, 121, 121);
 }
 
-.signUp-btn{
+.login-btn{
     width: 40%;
     height: 3em;
-    background-color: black;
+    background-color:var(--btn-bg-color);
     display: flex;
     justify-content: center;
     align-items: center;
     transition: 0.5s;
     border-radius: 0.25em;
     cursor: pointer;
-    color: white;
+    color: var(--btn-text-clr);
 }
 
-.signUp-btn:hover{
+.login-btn:hover{
     transform: scale(1.25);
 }
 
-.top{
-    height: 4.5em;
-    width: 100%;
-    background-color:white;
-    color: white;
-    box-shadow: 0 0.188em 1.550em rgb(189, 180, 180);
-    display: flex;
-}
-
-.image{
-    height: 59px;
-    width: 65px;
-    margin-left: 20px;
-    margin-top: -7em;
-    
-}
-.sun{
-    margin-top: 5px;
-    margin-left: 5px;
-  }
-  .switch{
-    margin-left: 80rem;
-    margin-top: 1rem;
-    background-color: black;
-    width:35px;
-    border-radius: 50%;
-    cursor: pointer;
-  }
 
 
-.color{
-    color: black;
-}
+
+
+/* .cart{
+    height: 40px;
+    width: 40px;
+    margin-left: 1210px;
+    margin-top: -45px;
+    right: 17%;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+} */
 
 .btn1{
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
     width: 95px;
     height: 40px;
     transition: 0.27s;
@@ -119,8 +133,8 @@ input:focus{
     
      
 }
-.btn2{
-    color:black;
+/* .btn2{
+    color: black;
     background-color: white;
     width: 95px;
     height: 40px;
@@ -132,7 +146,7 @@ input:focus{
     margin-top: -50px;
     
      
-}
+} */
 .btn1:hover{
     transform: scale(1.15);
 }
@@ -150,7 +164,7 @@ input:focus{
 
 }
 
-.footer{
+/* .footer{
     background-color: rgb(141, 133, 133);
     height: 85px;
     width: 100%;
@@ -170,3 +184,5 @@ input:focus{
     margin-left: 1350px;
     margin-top: -15px;
 }
+
+ */
