--- a/src/Forms/style/signUp.css
+++ b/src/Forms/style/signUp.css
@@ -1,17 +1,12 @@
-body{
-    background-color: var(--bg-clr);
-}
 * {
     margin: 0;
     box-sizing: border-box;
-    
 }
 
+
 /* .navbar{
-    background-color:white;
-    width: 100%;
-    height: 100%;
-}
+    background-color: aqua;
+} */
 
 .page{
     height: 600px;
@@ -20,12 +15,12 @@ body{
     justify-content: center;
     align-items: center;
     
-} */
-/* 
-.cover{
-    background-color: red;
+}
+
+.cover1{
+    background-color: var(--form);
     width: 25em;
-    height: 29em;
+    height: 33em;
     position: relative;
     border-radius: 1em;
     box-shadow: 0 0.188em 1.550em rgb(189, 180, 180);
@@ -34,11 +29,12 @@ body{
     align-items: center;
     justify-content: space-around;
     color: red;
+    margin-top: 40px;
     
-} */
+}
 
-.login{
-    color: var(--main-heading);
+.signUp{
+    color: black;
 }
 
 input {
@@ -54,7 +50,7 @@ input:focus{
     outline-color: rgb(122, 121, 121);
 }
 
-.login-btn{
+.signUp-btn{
     width: 40%;
     height: 3em;
     background-color: black;
@@ -67,44 +63,21 @@ input:focus{
     color: white;
 }
 
-.login-btn:hover{
+.signUp-btn:hover{
     transform: scale(1.25);
 }
-/* 
-.top{
-    height: 4.5em;
-    width: 100%;
-    background-color:red;
-    color: white;
-    box-shadow: 0 0.188em 1.550em rgb(189, 180, 180);
-    display: flex;
-} */
 
 
-.image{
-    height: 59px;
-    width: 65px;
-    margin-left: 20px;
-    margin-top: 5px;
-    
+
+
+
+.color{
+    color: black;
 }
 
-
-
-/* .cart{
-    height: 40px;
-    width: 40px;
-    margin-left: 1210px;
-    margin-top: -45px;
-    right: 17%;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-} */
-
 .btn1{
-    color: black;
-    background-color: white;
+    color: white;
+    background-color: black;
     width: 95px;
     height: 40px;
     transition: 0.27s;
@@ -116,8 +89,8 @@ input:focus{
     
      
 }
-/* .btn2{
-    color: black;
+.btn2{
+    color:black;
     background-color: white;
     width: 95px;
     height: 40px;
@@ -129,43 +102,12 @@ input:focus{
     margin-top: -50px;
     
      
-} */
+}
 .btn1:hover{
     transform: scale(1.15);
 }
 .btn2:hover{
     transform: scale(1.15);
-}
-.form-control{
-    position: absolute;
-    width: 50em;
-    height: -1em;
-    margin-top: -57px;
-    margin-left: 420px;
-    border-radius: 35px;
-    background-color: #f7f9fa;;
-
-}
-
-.footer{
-    background-color: rgb(141, 133, 133);
-    height: 85px;
-    width: 100%;
-    color: white;
-    bottom: 0;
-    left: 0;
-    position: relative;
-
-}
-.fimg{
-    height: 59px;
-    width: 65px;
-    margin-left: 20px;
-    margin-top: 15px;
-}
-.f{
-    margin-left: 1350px;
-    margin-top: -15px;
 }
 
 
