--- a/src/Forms/courses.css
+++ b/src/Forms/courses.css
@@ -142,7 +142,7 @@ a{
         color: black;
         font-size: 17px;
         font-family: Arial, Helvetica, sans-serif;
-        margin: 10px;
+        margin: 14px;
         border-radius: 8px;
         border-color: whitesmoke;
         box-shadow: rgb(180, 177, 177);
@@ -190,4 +190,74 @@ a{
 .dropbox{
     background-color: whitesmoke;
 }
+
+.dialogButton{
+    color: white;
+    background-color: rgb(234, 29, 29);
+    height: 2rem;
+    width: 2.5rem;
+    box-shadow: rgb(229, 208, 208);
+    margin-left: 26rem;
+    margin-top: 0.5rem;
+    position: absolute;
+    font-size: medium;
+    padding: 5px;
+    border-radius: 3px;
+}
+
+.dialogButton:hover{
+    cursor: pointer;
+    transition: 0.27s;
+    transform: scale(1.10);
+}
+
+.dialogBox{
+    height: 600px;
+    width: 600px;
+    padding: 400px;
+
+}
+
+.dialogImage{
+    height: 200px;
+    width: 370px;
+    margin-top: 30px;
+    margin-left: 14px;
+    box-shadow: #f7f9fa;
+    margin-bottom: 20px;
+    justify-content: center;
+
+}
+
+/* .css-1t1j96h-MuiPaper-root-MuiDialog-paper {
+    max-width: 1300px !important;
+    margin-left: 3rem;
+    align-items: center;
+} */
+
+/* .MuiDialogTitle-root+.css-ypiqx9-MuiDialogContent-root {
+    padding-top: 0;
+    width: 101rem;
+} */
+
+
+/* .outer{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 120px;
+    margin-right: 30px;
+    background-color: #f7f9fa;
+    height: 567px;
+    width: 1391rem;
+}
+
+.inside{
+    height: 596px;
+    width: 940px;
+    margin-left: 418px;
+    margin-top: -221px;
+    background-color: white;
+    padding: 20px;
+} */
+
 
