--- a/src/Forms/components/learning.css
+++ b/src/Forms/components/learning.css
@@ -1,9 +1,10 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Mulish;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Mulish;
 }
+
 /* .navbar-toggler{
     width: 100%;
     border-color: rgb(232, 232, 232);
@@ -16,155 +17,189 @@
     background-color: rgb(235, 243, 243);
     
 } */
-a{
-    margin: 45px;
-    color: black;
-    font-size: 15px;
-    font-family: var(--font-stack-heading-serif);
-    text-decoration: none;
+a {
+  margin: 45px;
+  color: black;
+  font-size: 15px;
+  font-family: var(--font-stack-heading-serif);
+  text-decoration: none;
 }
 
-  html {
-    font-size: 99.5%;
-  }
-  
-  :root {
-    --main-color: #333;
-    --primary-color: #acacac;
-    --icon-color: #525252;
-  }
-  
-  i {
-    width: 2rem;
-    height: 2rem;
-  }
-  
-  .fa,
-  .fas {
-    font-weight: 900;
-    display: grid;
-    place-items: center;
-    font-size: 1.3rem;
-    cursor: pointer;
-  }
-  .arrow-icon{
-      cursor: pointer;
-  }
-  
-  header {
-    width: 100%;
-    line-height: 5rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    border-bottom: 0.1rem solid #9a9191;
-    transform: rotate(-0.05deg);
-    margin-bottom: 2rem;
-  }
-  
-  .continue-shopping {
-    display: flex;
-    height: inherit;
-    align-items: center;
-  }
-  
-  .continue-shopping .arrow-icon {
-    width: 2.2rem;
-    height: 1.7rem;
-    margin-left: 17px;
-  }
-  
-  .continue-shopping h3 {
-    font-size: 1.6rem;
-    text-transform: capitalize;
-    color: var(--main-color);
-    margin-left: 1.5rem;
-    font-weight: 400;
-  }
-  
-  .main-cart-section h1 {
-      font-style: normal;
-      font-weight: bold;
-      text-transform: capitalize;
-      color: rgba(41, 41, 41, 1);
-      margin-top: 1rem;
-      margin-left: 5rem;
-    }
-  
-    .main-cart-section .cart-items {
-      /* background: linear-gradient(
+html {
+  font-size: 99.5%;
+}
+
+:root {
+  --main-color: #333;
+  --primary-color: #acacac;
+  --icon-color: #525252;
+}
+
+i {
+  width: 2rem;
+  height: 2rem;
+}
+
+.fa,
+.fas {
+  font-weight: 900;
+  display: grid;
+  place-items: center;
+  font-size: 1.3rem;
+  cursor: pointer;
+}
+
+.arrow-icon {
+  cursor: pointer;
+}
+
+header {
+  width: 100%;
+  line-height: 5rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  border-bottom: 0.1rem solid #9a9191;
+  transform: rotate(-0.05deg);
+  margin-bottom: 2rem;
+}
+
+.continue-shopping {
+  display: flex;
+  height: inherit;
+  align-items: center;
+}
+
+.continue-shopping .arrow-icon {
+  width: 2.2rem;
+  height: 1.7rem;
+  margin-left: 17px;
+}
+
+.continue-shopping h3 {
+  font-size: 1.6rem;
+  text-transform: capitalize;
+  color: var(--main-color);
+  margin-left: 1.5rem;
+  font-weight: 400;
+}
+
+.main-cart-section h1 {
+  font-style: normal;
+  font-weight: bold;
+  text-transform: capitalize;
+  color: rgba(41, 41, 41, 1);
+  margin-top: 1rem;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
+}
+
+.main-cart-section .cart-items {
+  /* background: linear-gradient(
         103.49deg,
         #ffffff -28.13%,
         rgba(242, 247, 255, 0.5) 116.84%
       ); */
-      background-color: #f7f9fa;
-      box-shadow: rgba(0, 0, 0, 0.08) 0rem 0.4rem 1.2rem;
-      border-radius: 2rem;
-      display: grid;
-      place-items: center;
-    }
-    
-    .cart-items hr {
-      margin: 2rem auto;
-      overflow-y: scroll;
-    }
-    
-    .cart-items-container {
-      width: 90%;
-      height: 56rem;
-      
-    }
-  
-    .items-info {
-      width: 100%;
-      height: 11rem;
-      /* background-color: lavender; */
-      margin: auto;
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-      border-bottom: 0.1rem solid #9a9191;
-    }
-    
-    .items-info .product-img img {
-      width: 14rem;
-      height: 8rem;
-      filter: drop-shadow(0rem 0.4rem 1rem #f1f7ff);
-      border-radius: 1rem;
-      margin-top: 21px;
-    }
-  
-    .items-info .title {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      align-items: center;
-      margin-left: 300px;
-      width: 300px;
-    }
-    
-    .items-info .title h2 {
-      font-style: normal;
-      font-weight: bold;
-      font-size: 2.2rem;
-      display: flex;
-      align-items: center;
-      text-transform: capitalize;
-      color: var(--main-color);
-    }
-    
-    .items-info .title p {
-      font-style: normal;
-      font-weight: normal;
-      font-size: 1.8rem;
-      display: flex;
-      align-items: center;
-      text-transform: capitalize;
-      text-align: left;
-      color: var(--primary-color);
-    }
-  
-  
-    
-    
+  background-color: #f7f9fa;
+  box-shadow: rgba(0, 0, 0, 0.08) 0rem 0.4rem 1.2rem;
+  border-radius: 2rem;
+  display: grid;
+  place-items: center;
+}
+
+.cart-items hr {
+  margin: 2rem auto;
+  overflow-y: scroll;
+}
+
+.cart-items-container {
+  width: 100%;
+  height: auto;
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  /* justify-content: space-evenly; */
+
+}
+
+.items-info {
+  width: 100%;
+  height: 11rem;
+  /* background-color: lavender; */
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  border-bottom: 0.1rem solid #9a9191;
+}
+
+.items-info .product-img img {
+  width: 14rem;
+  height: 8rem;
+  filter: drop-shadow(0rem 0.4rem 1rem #f1f7ff);
+  border-radius: 1rem;
+  margin-top: 21px;
+}
+
+.items-info .title {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 300px;
+  width: 300px;
+}
+
+.items-info .title h2 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 2.2rem;
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
+  color: var(--main-color);
+}
+
+.items-info .title p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
+  text-align: left;
+  color: var(--primary-color);
+}
+
+
+.card {
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+}
+
+.product-img img {
+  width: 100%;
+  height: 150px;
+  /* Set a specific height for the images */
+  object-fit: cover;
+  /* Maintain aspect ratio and cover the whole space */
+}
+
+.title h3 {
+  margin: 10px 0;
+}
+
+.progress-bar {
+  margin: 10px 0;
+}
+
+.PlayList {
+  text-align: center;
+}
+
+
+
 /* 
 .learningTop{
     font-size: 40px;
@@ -185,7 +220,7 @@ a{
 
 
 
-.items-info .PlayList{
+.items-info .PlayList {
   font-style: normal;
   font-weight: bold;
   font-size: 2.2rem;
@@ -193,4 +228,37 @@ a{
   align-items: center;
   text-transform: capitalize;
   color: var(--main-color);
+}
+
+.percentage-text {
+  font-size: 14px;
+}
+
+.card:hover img {
+  filter: blur(2px);
+  /* Add blur effect on hover */
+}
+
+
+.card:hover .play-icon {
+  opacity: 1;
+  /* Show the play icon on hover */
+}
+
+.card .play-icon {
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 48px;
+  opacity: 0;
+  /* Initially hide the play icon */
+  transition: opacity 0.3s ease-in-out;
+  /* Add transition for smooth effect */
+}
+
+.subscribe_container{
+  width: 90rem;
+  margin: 0 auto;
 }
