--- a/src/Forms/components/navbar.css
+++ b/src/Forms/components/navbar.css
@@ -9,17 +9,18 @@
 
 .navbar-brand img {
   height: 40px;
-  /* Adjust the height of the logo as needed */
 }
 
 .form-control {
-  width: 300px;
-  /* Adjust the width of the search input as needed */
+  top:3rem,
+}
+
+.form-control #search{
+  top:4rem,
 }
 
 .navbar-buttons button {
   margin-left: 10px;
-  /* Adjust the spacing between buttons as needed */
 }
 
 
@@ -28,22 +29,17 @@
 }
 
 .switch {
-  /* margin-left: 84rem; */
-  /* top:0.5rem; */
-  /* border-radius: 70%; */
   display: flex;
   align-items: center;
   cursor: pointer;
   position: fixed;
 }
 
-.hide_menu_topbar {
-  display: none;
-}
 
 .navbar-left {
   display: flex;
   align-items: center;
+  margin:-2rem
 }
 
 .navbar-right {
@@ -59,4 +55,52 @@
 
 .icon-container > *:not(:last-child) {
   margin-right: 20px; /* Adjust the margin as needed */
+}
+
+.Search {
+  width: 30%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc; 
+  border-radius: 20px; 
+  margin-right: 40%;
+}
+
+/* Optional: Style placeholder text */
+.Search::placeholder {
+  color: #999; /* Adjust placeholder text color as needed */
+}
+
+/* Optional: Style when the input is focused */
+.Search:focus {
+  outline: none; /* Remove outline on focus if desired */
+  border-color: #4CAF50; /* Adjust border color on focus as needed */
+}
+
+
+/* navbar button */
+
+.navbar-brand{
+  font-size: 20px;
+  span{
+    color: var(--clr-orange);
+  }
+}
+.text-uppercase{text-transform: uppercase;}
+
+.ls-1{letter-spacing: 1px;}
+.fw-8{font-weight: 800;}
+
+/* search */
+
+.search-container {
+  position: relative;
+}
+
+.search-icon {
+  position: absolute;
+  top: 50%;
+  left: 10px; /* Adjust as needed to position the icon */
+  transform: translateY(-50%);
+  cursor: pointer;
 }
