--- a/src/Forms/components/learning.css
+++ b/src/Forms/components/learning.css
@@ -303,7 +303,7 @@ header {
 }
 
 .course-title {
-  font-size: 20px; /* Adjust the font size for the course title */
+  font-size: 20px; 
   font-weight: bold;
   margin-bottom: 10px;
 }
