--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,7 @@
   position: fixed;
   top:0%;
   width: 100%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 1.1)
 }
 
 
@@ -79,12 +80,6 @@
   --comp:whitesmoke;
   --shadow: 0 0.188em 1.55em rgb(156, 156, 156);
 }
-
-
-
-
-/*  */
-
 
 .logo {
   font-size: 20px;
@@ -119,7 +114,7 @@
 
 .card {
   position: relative;
-  width:15%;
+  width:20%;
   padding: 10px;
   border-radius: 20px;
   -webkit-box-shadow: 0px 5px 33px -21px rgba(66, 68, 90, 1);
