--- a/src/Forms/components/learning.css
+++ b/src/Forms/components/learning.css
@@ -112,13 +112,22 @@ header {
 }
 
 .cart-items-container {
-  width: 100%;
+  width: 98%;
   height: auto;
   display: flex;
   gap: 1rem;
   flex-wrap: wrap;
+  margin-top: 1rem;
   /* justify-content: space-evenly; */
 
+}
+.cart-items-container-list{
+  width: 95%;
+  height: auto;
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  margin-top: 1rem;
 }
 
 .items-info {
@@ -232,7 +241,7 @@ header {
 
 .percentage-text {
   font-size: 14px;
-}
+  margin-top: 5px;}
 
 .card:hover img {
   filter: blur(2px);
@@ -259,6 +268,6 @@ header {
 }
 
 .subscribe_container{
-  width: 90rem;
+  width: 95%;
   margin: 0 auto;
 }
