--- a/src/Forms/components/navbar.css
+++ b/src/Forms/components/navbar.css
@@ -64,6 +64,7 @@
   border: 1px solid #ccc; 
   border-radius: 20px; 
   margin-right: 40%;
+  min-width: 10rem;
 }
 
 /* Optional: Style placeholder text */
