--- a/src/Forms/style/courses.css
+++ b/src/Forms/style/courses.css
@@ -91,7 +91,10 @@ a {
     justify-content: space-evenly;
     margin-top: 1rem;
 }
-
+.listview{
+    background-color: none;
+}
+/* 
 .Cbox {
 
     height: 450px;
@@ -109,7 +112,7 @@ a {
     align-items: center;
     padding: 19px;
 
-}
+} */
 
 .courseImg {
     height: 180px;
