--- a/src/Forms/style/courses.css
+++ b/src/Forms/style/courses.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     box-sizing: border-box;
-    
+
 }
 
 /* .navbar-toggler{
@@ -87,13 +87,15 @@ a {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    background-color:var(--bg-clr);
+    background-color: var(--bg-clr);
     justify-content: space-evenly;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
 }
-.listview{
+
+.listview {
     background-color: none;
 }
+
 /* 
 .Cbox {
 
@@ -131,15 +133,7 @@ a {
     align-items: center;
     padding: 17px;
     margin-left: -15px;
-    color:var(--main-heading);
-}
-
-.courseBox {
-    height: auto;
-    width: 100%;
-    display: flex;
-
-
+    color: var(--main-heading);
 }
 
 .Cbox {
@@ -159,13 +153,13 @@ a {
     align-items: center;
     padding: 19px;
 
-    
+
 }
 
 .subscribe-btn {
     width: 80%;
     height: 2em;
-    background-color:var(--btn-bg-color);
+    background-color: var(--btn-bg-color);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -200,3 +194,14 @@ a {
     background-color: whitesmoke;
 }
 
+#DescriptionDialog .MuiDialog-paperWidthSm {
+
+    height: 80% !important;
+    width: 90% !important;
+    max-width: 90% !important;
+    max-height: 80% !important
+}
+
+#drawer .MuiDrawer-paper {
+   top:5.2rem !important
+  }
