Admin Dashboard ui changes

--- a/src/Forms/style/courses.css
+++ b/src/Forms/style/courses.css
@@ -227,5 +227,6 @@ a {
 #drawer .MuiDrawer-paper {
     top: 5.2rem !important;
     z-index: 0;
-    height: 90vh;
+    height: 95vh;
+    background-color: var(--form)
 }
