--- a/src/Forms/style/courses.css
+++ b/src/Forms/style/courses.css
@@ -25,7 +25,7 @@ a {
     text-decoration: none;
 }
 
-.coursesTop {
+/* .coursesTop { */
 
     /* margin-top: 20px;
     font-size: 35px;
@@ -41,7 +41,7 @@ a {
     box-shadow: rgb(214, 209, 209); */
 
     /* margin: 30px;   */
-}
+/* } */
 
 .left {
     font-family: 'Anton', sans-serif;
@@ -227,7 +227,6 @@ a {
 }
 
 #DescriptionDialog .MuiDialog-paperWidthSm {
-
     height: 80% !important;
     width: 90% !important;
     max-width: 90% !important;
@@ -250,5 +249,4 @@ a {
    .filt{
     right:8%;
    }
-
 }
