--- a/src/Forms/components/navbar.css
+++ b/src/Forms/components/navbar.css
@@ -12,20 +12,19 @@
 }
 
 .form-control {
-  top:3rem,
+  top: 3rem;
 }
 
-.form-control #search{
-  top:4rem,
+.form-control #search {
+  top: 4rem;
 }
 
 .navbar-buttons button {
   margin-left: 10px;
 }
 
-
 .sun {
-  color: white
+  color: white;
 }
 
 .switch {
@@ -35,11 +34,10 @@
   position: fixed;
 }
 
-
 .navbar-left {
   display: flex;
   align-items: center;
-  margin:-2rem
+  margin: -2rem;
 }
 
 .navbar-right {
@@ -50,7 +48,7 @@
 .icon-container {
   display: flex;
   color: white;
-  cursor:"pointer"
+  cursor: "pointer";
 }
 
 .icon-container > *:not(:last-child) {
@@ -61,8 +59,8 @@
   width: 30%;
   padding: 10px;
   font-size: 16px;
-  border: 1px solid #ccc; 
-  border-radius: 20px; 
+  border: 1px solid #ccc;
+  border-radius: 20px;
   margin-right: 40%;
   min-width: 10rem;
 }
@@ -75,22 +73,27 @@
 /* Optional: Style when the input is focused */
 .Search:focus {
   outline: none; /* Remove outline on focus if desired */
-  border-color: #4CAF50; /* Adjust border color on focus as needed */
+  border-color: #4caf50; /* Adjust border color on focus as needed */
 }
-
 
 /* navbar button */
 
-.navbar-brand{
+.navbar-brand {
   font-size: 20px;
-  span{
+  span {
     color: var(--clr-orange);
   }
 }
-.text-uppercase{text-transform: uppercase;}
+.text-uppercase {
+  text-transform: uppercase;
+}
 
-.ls-1{letter-spacing: 1px;}
-.fw-8{font-weight: 800;}
+.ls-1 {
+  letter-spacing: 1px;
+}
+.fw-8 {
+  font-weight: 800;
+}
 
 /* search */
 
@@ -104,4 +107,33 @@
   left: 10px; /* Adjust as needed to position the icon */
   transform: translateY(-50%);
   cursor: pointer;
+}
+
+/*  new css autocomplete */
+
+.searchnav label + .MuiInput-formControl {
+  margin-top: -0.5rem;
+}
+
+
+.searchnav.MuiInputLabel-formControl {
+  top: -1rem !important;
+}
+
+.searchnav.css-1h51icj-MuiAutocomplete-root .MuiInput-root .MuiInput-input {
+  padding: 0px 0px 0px 0px !important;
+}
+
+.searchnav.css-1h51icj-MuiAutocomplete-root {
+  margin-right: 40%;
+  width: 30%;
+  min-width: 10rem;
+}
+
+.MuiInput-underline::before{
+  display: none !important;
+}
+
+.MuiInput-underline::after{
+  display: none !important;
 }
